CSS Mobile: fixed z-index menu and close menu icon on mobile view

--- a/src/main/webapp/css/medium-size.css
+++ b/src/main/webapp/css/medium-size.css
@@ -146,10 +146,10 @@
         flex-direction: column;
         padding-left: 50px;
         transition: transform 0.5s ease-in-out;
-        box-shadow: 3px 0px 5px 0px #121212;
+        box-shadow: 3px 0 5px 0 #121212;
         position: absolute;
         box-sizing: border-box;
-        z-index: 4;
+        z-index: 12;
 
         & li{
             margin: 10px;
